syntax = "proto3";
import "status.proto";
package adsmsg;

message NonBibRecord {
    string bibcode = 1;
    repeated string simbad_objects = 3;
    repeated string grants = 4;
    float boost = 6;
    int32 citation_count = 7;
    int32 read_count = 8;
    repeated string readers = 9;
    repeated string reference = 12;
    repeated string ned_objects = 13;
    // data field is array of sub types:count: ['NED:15', 'CDS:5']
    repeated string data = 14;
    // total_link_counts holds the sum of all the counts in the data map
    int32 total_link_counts = 15;
    repeated string esource = 17;
    repeated string property = 18;
    repeated DataLinksRow data_links_rows = 19;
    Status status = 20;
    int32 norm_cites = 21;
}    


// holds elements from a row in the nonbib DataLinksTable
message DataLinksRow {
	string link_type = 1;
	string link_sub_type = 2;
	repeated string url = 3;
	repeated string title = 4;
	int32 item_count = 5;
}

message NonBibRecordList {
	repeated NonBibRecord nonbib_records = 1;
	Status status = 2;
}

// holds elements from a bibcode in nonbib DataLinksTable
message DataLinksRecord {
    string bibcode = 1;
    repeated DataLinksRow data_links_rows = 2;
}